# singularity

./: Cargo.toml  LICENSE  readme.md
singularity_proc_macros/: Cargo.toml
singularity_proc_macros/src/: injectable_struct.rs  lib.rs  struct_kind.rs
src/: container.rs
src/container/: injectable.rs  invokable.rs  resolve_deps_from.rs  scope.rs
src/container/injectable/: injectable_trait_test.rs
